<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/list"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_0dp">

    <Button
        android:id="@+id/ol_showinfo_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:background="@drawable/selector_ol_button"
        android:text="@string/ol_btn_lv_info"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ol_chat_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:background="@drawable/selector_ol_button"
        android:text="@string/ol_btn_lv_pm"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ol_couple_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:background="@drawable/selector_ol_button"
        android:text="@string/ol_btn_lv_cp"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ol_kickout_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/selector_ol_button_login"
        android:text="@string/ol_btn_lv_kick"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ol_closepos_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:background="@drawable/selector_ol_button"
        android:text="@string/ol_btn_lv_cls"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ol_chat_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:background="@drawable/selector_ol_button_login"
        android:text="@string/ol_btn_chat_b"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ol_chat_black_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:background="@drawable/selector_ol_button"
        android:text="@string/ol_btn_chat_b_c"
        android:textColor="@color/white1"
        android:visibility="gone"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ol_sound_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:background="@drawable/selector_ol_button"
        android:text="@string/ol_btn_lv_mute"
        android:textColor="@color/white1"
        android:textSize="14sp"
        android:visibility="gone" />
</LinearLayout>
