<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/filled_bar"
    android:gravity="center"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/rand_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rand_all"
            android:layout_centerHorizontal="true"
            android:background="@drawable/filled_box"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_rand_2"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/rand_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rand_3"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_rand_4"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/rand_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rand_5"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_rand_5"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/rand_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_favor"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_rand_1"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/rand_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rand_0"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_rand_3"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/add_favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_add_fa"
            android:textColor="@color/settings" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/relativeLayout1">

        <Button
            android:id="@+id/type_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_j"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_pop"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/type_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_d"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_red"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/type_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_e"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_ori"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/type_j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favor"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_classic"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/type_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_l"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_game"
            android:textColor="@color/settings" />

        <Button
            android:id="@+id/favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_list_c"
            android:fontFamily="@font/main"
            android:text="@string/ol_songpop_list_local_fa"
            android:textColor="@color/settings" />
    </RelativeLayout>
</RelativeLayout>
