<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_400dp"
        android:background="@drawable/ol_rectangle_orange">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ol_family_ma_up_ti"
                android:textColor="@color/white1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ol_family_levelup_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:ems="30"
                android:gravity="top"
                android:text="@string/ol_family_ma_up_info"
                android:textColor="@color/white1"
                android:textSize="15sp" />

            <Button
                android:id="@+id/ol_family_levelup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/selector_ol_button"
                android:enabled="false"
                android:text="@string/ol_family_ma_up"
                android:textColor="@color/white1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/family_declaration"
                android:textColor="@color/white1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/ol_family_changedecl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/selector_ol_button"
                android:text="@string/ol_family_ma_de"
                android:textColor="@color/white1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/ol_family_ma_ex"
                android:textColor="@color/white1"
                android:textSize="24sp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:checked="false"
                android:enabled="false"
                android:text="@string/ol_family_ma_ex_info"
                android:textColor="@color/white1"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:maxEms="30"
                    android:text="@string/ol_family_ma_ex_song"
                    android:textColor="@color/white1"
                    android:textSize="16sp" />

                <AutoCompleteTextView
                    style="@style/AutoCompleteStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/search_box"
                    android:completionThreshold="1"
                    android:configChanges="keyboard"
                    android:divider="@null"
                    android:dropDownWidth="@dimen/dimen_300dp"
                    android:dropDownHeight="@dimen/dimen_130dp"
                    android:ems="30"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
                    android:listSelector="@android:color/transparent"
                    android:maxLines="1"
                    android:minWidth="@dimen/dimen_100dp"
                    android:textColor="#ffffffff"
                    android:textColorHint="#90ffffff"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/ol_family_ma_ex_target"
                    android:textColor="@color/white1"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_back"
                    android:ems="30"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="bottom"
                    android:textColor="@color/white1"
                    android:textSize="16sp">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/ol_family_changetest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/selector_ol_button"
                android:enabled="false"
                android:text="@string/ol_family_ma_ex_c"
                android:textColor="@color/white1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/ol_family_ma_logo"
                android:textColor="@color/white1"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:ems="30"
                android:gravity="top"
                android:text="@string/ol_family_ma_logo_info"
                android:textColor="@color/white1"
                android:textSize="15sp" />

            <Button
                android:id="@+id/ol_family_changepic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_80dp"
                android:background="@drawable/selector_ol_button"
                android:enabled="false"
                android:text="@string/ol_family_ma_logo_c"
                android:textColor="@color/white1"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
