<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/filled_bar"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/group_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_puased"

        android:text="@string/ol_group_list_b"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/group_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/v1_name"

        android:text="@string/ol_group_list_y"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/group_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/v6_name"

        android:text="@string/ol_group_list_r"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />
</LinearLayout>
